@@ -150,10 +150,6 @@ val quarkusBuild =
   }
 
 tasks.withType<Test>().configureEach {
-  jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
-  systemProperty("quarkus.log.level", testLogLevel())
-  systemProperty("quarkus.log.console.level", testLogLevel())
-  systemProperty("http.access.log.level", testLogLevel())
   if (project.hasProperty("native")) {
     systemProperty("native.image.path", quarkusBuild.get().nativeRunner)
   }
@@ -161,10 +157,6 @@ tasks.withType<Test>().configureEach {
   systemProperty("quarkus.smallrye.jwt.enabled", "true")
   // TODO requires adjusting the tests - systemProperty("quarkus.http.test-port", "0") -  set this
   //  property in application.properties
-
-  val testHeapSize: String? by project
-  minHeapSize = if (testHeapSize != null) testHeapSize as String else "256m"
-  maxHeapSize = if (testHeapSize != null) testHeapSize as String else "1024m"
 }
 
 tasks.named<Test>("intTest") { filter { excludeTestsMatching("ITNative*") } }
